# compile_time_fixed_point_library

./: Doxyfile  README.md  license.txt
ctfx_systemc_tests/compare_math/: CMakeLists.txt  Makefile  tb_shifts.cpp  testData.h
ctfx_systemc_tests/copy_ctors/: CMakeLists.txt  copy_ctors.cpp
ctfx_systemc_tests/ranges/: CMakeLists.txt  Makefile  main.cpp  range_fx.cpp
gen_scripts/: gen_class.py  gen_functions.py  gen_int.py  gen_int_functions.py  gen_int_mixed_functions.py  gen_mixed.py  gen_roundsat.py
include/: sc_common.h  sc_fixed.h  sc_fixed_functions.h  sc_fixed_roundsat.h  sc_int.h  sc_int_bitref.h  sc_int_functions.h  sc_int_mixed_functions.h  sc_int_subref.h  sc_int_types.h  sc_mixed_functions.h  sc_ufixed.h  sc_uint.h  sc_uint_bitref.h  sc_uint_functions.h  sc_uint_subref.h
sc_ft/: Makefile  sc_common.h  sc_fixed.h  sc_fixed_functions.h  sc_fixed_roundsat.h  sc_ft.h  sc_int.h  sc_int_bitref.h  sc_int_functions.h  sc_int_mixed_functions.h  sc_int_subref.h  sc_int_types.h  sc_mixed_functions.h  sc_ufixed.h  sc_ufixed_functions.h  sc_uint.h  sc_uint_functions.h  sc_uint_subref.h
speed_test/: CMakeLists.txt  example_output.txt  fir.h  main.cpp  noise.cpp  noise.h
systemc_copied_examples/fft_fxpt/: CMakeLists.txt
systemc_copied_examples/fir/: CMakeLists.txt  Makefile
test_fixed/: CMakeLists.txt  get_type_info.h  tb_sc_fixed.cpp  tb_sc_fixed_types.cpp
test_fixed_math/: CMakeLists.txt  tb_units.cpp
test_ints/: CMakeLists.txt  Makefile  Type_Info.txt  get_type_info.h  tb_int.cpp  tb_int_types.cpp  tb_ref_types.cpp
